gen/ScribbleParser.output
Terminals unused in grammar

   REAL
   POWER
   AUTO
   CONST
   THREAD
   NEG


State 46 conflicts: 1 reduce/reduce
State 51 conflicts: 17 shift/reduce
State 107 conflicts: 11 shift/reduce
State 117 conflicts: 6 shift/reduce
State 123 conflicts: 11 shift/reduce
State 124 conflicts: 6 shift/reduce
State 125 conflicts: 6 shift/reduce
State 126 conflicts: 6 shift/reduce
State 127 conflicts: 6 shift/reduce
State 128 conflicts: 1 shift/reduce
State 129 conflicts: 6 shift/reduce
State 131 conflicts: 11 shift/reduce
State 133 conflicts: 11 shift/reduce
State 135 conflicts: 11 shift/reduce
State 145 conflicts: 1 shift/reduce
State 149 conflicts: 11 shift/reduce
State 154 conflicts: 6 shift/reduce
State 155 conflicts: 6 shift/reduce
State 156 conflicts: 6 shift/reduce
State 167 conflicts: 11 shift/reduce
State 173 conflicts: 11 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: /* empty */
    2        | Program IMPORT LPAREN STRING RPAREN
    3        | Program Function
    4        | Program TYPE WORD ASSIGN Type
    5        | Program TYPE WORD ASSIGN STRUCT LBRACKET BaseStructureInfo RBRACKET

    6 BaseStructureInfo: /* empty */
    7                  | BaseStructureInfo WORD COLON Type

    8 Type: TYPE_INT
    9     | TYPE_STRING
   10     | TYPE_BOOL
   11     | TYPE_VOID
   12     | TYPE_ARRAY LPAREN Type RPAREN
   13     | WORD LINK WORD
   14     | WORD

   15 Variable: VARIABLE WORD COLON Type

   16 AutoVariable: VARIABLE WORD ASSIGN Expression

   17 ArgumentDefinition: WORD COLON Type

   18 ArgumentDefinitions: ArgumentDefinition
   19                    | ArgumentDefinitions COMMA ArgumentDefinition

   20 Function: FUNCTION WORD LPAREN ArgumentDefinitions RPAREN COLON Type LBRACKET Statements RBRACKET
   21         | FUNCTION WORD LPAREN RPAREN COLON Type LBRACKET Statements RBRACKET
   22         | FUNCTION WORD LPAREN ArgumentDefinitions RPAREN LBRACKET Statements RBRACKET
   23         | FUNCTION WORD LPAREN RPAREN LBRACKET Statements RBRACKET

   24 Arguments: Expression
   25          | Arguments COMMA Expression

   26 Statements: /* empty */
   27           | Statements Statement
   28           | Statements RETURN

   29 FunctionCall: WORD LPAREN Arguments RPAREN
   30             | WORD LPAREN RPAREN
   31             | WORD LINK WORD LPAREN Arguments RPAREN
   32             | WORD LINK WORD LPAREN RPAREN

   33 IfStatements: Statement
   34             | LBRACKET Statements RBRACKET

   35 Statement: Expression END
   36          | IF Expression THEN IfStatements
   37          | IF Expression THEN IfStatements ELSE IfStatements
   38          | FOR Expression END Expression END Expression DO IfStatements
   39          | WHILE Expression LBRACKET Statements RBRACKET
   40          | RETURN Expression END

   41 Expression: TRUE
   42           | FALSE
   43           | INT
   44           | STRING
   45           | Type LBRACKET Arguments RBRACKET
   46           | Variable
   47           | Variable ASSIGN Expression
   48           | AutoVariable
   49           | LENGTH LPAREN Expression RPAREN
   50           | LSQBRACKET Expression RSQBRACKET Type
   51           | Expression LSQBRACKET Expression RSQBRACKET ASSIGN Expression
   52           | Expression LSQBRACKET Expression RSQBRACKET
   53           | WORD
   54           | FunctionCall
   55           | Expression PLUS Expression
   56           | Expression MINUS Expression
   57           | Expression TIMES Expression
   58           | Expression DIVIDE Expression
   59           | NIL EQUALS Expression
   60           | Expression EQUALS NIL
   61           | Expression EQUALS Expression
   62           | Expression NOT EQUALS Expression
   63           | Expression GREATER Expression
   64           | Expression LESSER Expression
   65           | Expression LESSER EQUALS Expression
   66           | Expression GREATER EQUALS Expression
   67           | LPAREN Expression RPAREN
   68           | WORD ASSIGN Expression
   69           | WORD TWOPLUS
   70           | TWOPLUS WORD
   71           | WORD TWOMINUS
   72           | TWOMINUS WORD
   73           | Expression AND Expression
   74           | Expression POINT WORD
   75           | Expression POINT WORD ASSIGN Expression


Terminals, with rules where they appear

$end (0) 0
error (256)
WORD (258) 4 5 7 13 14 15 16 17 20 21 22 23 29 30 31 32 53 68 69 70
    71 72 74 75
STRING (259) 2 44
REAL (260)
INT (261) 43
PLUS (262) 55
MINUS (263) 56
TIMES (264) 57
DIVIDE (265) 58
POWER (266)
EQUALS (267) 59 60 61 62 65 66
ASSIGN (268) 4 5 16 47 51 68 75
IF (269) 36 37
ELSE (270) 37
GREATER (271) 63 66
LESSER (272) 64 65
FOR (273) 38
TYPE_ARRAY (274) 12
TYPE_VOID (275) 11
RETURN (276) 28 40
WHILE (277) 39
NOT (278) 62
IMPORT (279) 2
LINK (280) 13 31 32
LPAREN (281) 2 12 20 21 22 23 29 30 31 32 49 67
RPAREN (282) 2 12 20 21 22 23 29 30 31 32 49 67
LBRACKET (283) 5 20 21 22 23 34 39 45
RBRACKET (284) 5 20 21 22 23 34 39 45
COMMA (285) 19 25
TWOMINUS (286) 71 72
TWOPLUS (287) 69 70
TYPE_BOOL (288) 10
TRUE (289) 41
FALSE (290) 42
AUTO (291)
AND (292) 73
NIL (293) 59 60
TYPE (294) 4 5
FUNCTION (295) 20 21 22 23
VARIABLE (296) 15 16
CONST (297)
STRUCT (298) 5
LENGTH (299) 49
THREAD (300)
POINT (301) 74 75
TYPE_INT (302) 8
TYPE_STRING (303) 9
COLON (304) 7 15 17 20 21
LSQBRACKET (305) 50 51 52
RSQBRACKET (306) 50 51 52
THEN (307) 36 37
END (308) 35 38 40
DO (309) 38
NEG (310)


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
Program (57)
    on left: 1 2 3 4 5, on right: 0 2 3 4 5
BaseStructureInfo (58)
    on left: 6 7, on right: 5 7
Type (59)
    on left: 8 9 10 11 12 13 14, on right: 4 7 12 15 17 20 21 45 50
Variable (60)
    on left: 15, on right: 46 47
AutoVariable (61)
    on left: 16, on right: 48
ArgumentDefinition (62)
    on left: 17, on right: 18 19
ArgumentDefinitions (63)
    on left: 18 19, on right: 19 20 22
Function (64)
    on left: 20 21 22 23, on right: 3
Arguments (65)
    on left: 24 25, on right: 25 29 31 45
Statements (66)
    on left: 26 27 28, on right: 20 21 22 23 27 28 34 39
FunctionCall (67)
    on left: 29 30 31 32, on right: 54
IfStatements (68)
    on left: 33 34, on right: 36 37 38
Statement (69)
    on left: 35 36 37 38 39 40, on right: 27 33
Expression (70)
    on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58
    59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75, on right: 16
    24 25 35 36 37 38 39 40 47 49 50 51 52 55 56 57 58 59 60 61 62
    63 64 65 66 67 68 73 74 75


state 0

    0 $accept: . Program $end

    $default  reduce using rule 1 (Program)

    Program  go to state 1


state 1

    0 $accept: Program . $end
    2 Program: Program . IMPORT LPAREN STRING RPAREN
    3        | Program . Function
    4        | Program . TYPE WORD ASSIGN Type
    5        | Program . TYPE WORD ASSIGN STRUCT LBRACKET BaseStructureInfo RBRACKET

    $end      shift, and go to state 2
    IMPORT    shift, and go to state 3
    TYPE      shift, and go to state 4
    FUNCTION  shift, and go to state 5

    Function  go to state 6


state 2

    0 $accept: Program $end .

    $default  accept


state 3

    2 Program: Program IMPORT . LPAREN STRING RPAREN

    LPAREN  shift, and go to state 7


state 4

    4 Program: Program TYPE . WORD ASSIGN Type
    5        | Program TYPE . WORD ASSIGN STRUCT LBRACKET BaseStructureInfo RBRACKET

    WORD  shift, and go to state 8


state 5

   20 Function: FUNCTION . WORD LPAREN ArgumentDefinitions RPAREN COLON Type LBRACKET Statements RBRACKET
   21         | FUNCTION . WORD LPAREN RPAREN COLON Type LBRACKET Statements RBRACKET
   22         | FUNCTION . WORD LPAREN ArgumentDefinitions RPAREN LBRACKET Statements RBRACKET
   23         | FUNCTION . WORD LPAREN RPAREN LBRACKET Statements RBRACKET

    WORD  shift, and go to state 9


state 6

    3 Program: Program Function .

    $default  reduce using rule 3 (Program)


state 7

    2 Program: Program IMPORT LPAREN . STRING RPAREN

    STRING  shift, and go to state 10


state 8

    4 Program: Program TYPE WORD . ASSIGN Type
    5        | Program TYPE WORD . ASSIGN STRUCT LBRACKET BaseStructureInfo RBRACKET

    ASSIGN  shift, and go to state 11


state 9

   20 Function: FUNCTION WORD . LPAREN ArgumentDefinitions RPAREN COLON Type LBRACKET Statements RBRACKET
   21         | FUNCTION WORD . LPAREN RPAREN COLON Type LBRACKET Statements RBRACKET
   22         | FUNCTION WORD . LPAREN ArgumentDefinitions RPAREN LBRACKET Statements RBRACKET
   23         | FUNCTION WORD . LPAREN RPAREN LBRACKET Statements RBRACKET

    LPAREN  shift, and go to state 12


state 10

    2 Program: Program IMPORT LPAREN STRING . RPAREN

    RPAREN  shift, and go to state 13


state 11

    4 Program: Program TYPE WORD ASSIGN . Type
    5        | Program TYPE WORD ASSIGN . STRUCT LBRACKET BaseStructureInfo RBRACKET

    WORD         shift, and go to state 14
    TYPE_ARRAY   shift, and go to state 15
    TYPE_VOID    shift, and go to state 16
    TYPE_BOOL    shift, and go to state 17
    STRUCT       shift, and go to state 18
    TYPE_INT     shift, and go to state 19
    TYPE_STRING  shift, and go to state 20

    Type  go to state 21


state 12

   20 Function: FUNCTION WORD LPAREN . ArgumentDefinitions RPAREN COLON Type LBRACKET Statements RBRACKET
   21         | FUNCTION WORD LPAREN . RPAREN COLON Type LBRACKET Statements RBRACKET
   22         | FUNCTION WORD LPAREN . ArgumentDefinitions RPAREN LBRACKET Statements RBRACKET
   23         | FUNCTION WORD LPAREN . RPAREN LBRACKET Statements RBRACKET

    WORD    shift, and go to state 22
    RPAREN  shift, and go to state 23

    ArgumentDefinition   go to state 24
    ArgumentDefinitions  go to state 25


state 13

    2 Program: Program IMPORT LPAREN STRING RPAREN .

    $default  reduce using rule 2 (Program)


state 14

   13 Type: WORD . LINK WORD
   14     | WORD .

    LINK  shift, and go to state 26

    $default  reduce using rule 14 (Type)


state 15

   12 Type: TYPE_ARRAY . LPAREN Type RPAREN

    LPAREN  shift, and go to state 27


state 16

   11 Type: TYPE_VOID .

    $default  reduce using rule 11 (Type)


state 17

   10 Type: TYPE_BOOL .

    $default  reduce using rule 10 (Type)


state 18

    5 Program: Program TYPE WORD ASSIGN STRUCT . LBRACKET BaseStructureInfo RBRACKET

    LBRACKET  shift, and go to state 28


state 19

    8 Type: TYPE_INT .

    $default  reduce using rule 8 (Type)


state 20

    9 Type: TYPE_STRING .

    $default  reduce using rule 9 (Type)


state 21

    4 Program: Program TYPE WORD ASSIGN Type .

    $default  reduce using rule 4 (Program)


state 22

   17 ArgumentDefinition: WORD . COLON Type

    COLON  shift, and go to state 29


state 23

   21 Function: FUNCTION WORD LPAREN RPAREN . COLON Type LBRACKET Statements RBRACKET
   23         | FUNCTION WORD LPAREN RPAREN . LBRACKET Statements RBRACKET

    LBRACKET  shift, and go to state 30
    COLON     shift, and go to state 31


state 24

   18 ArgumentDefinitions: ArgumentDefinition .

    $default  reduce using rule 18 (ArgumentDefinitions)


state 25

   19 ArgumentDefinitions: ArgumentDefinitions . COMMA ArgumentDefinition
   20 Function: FUNCTION WORD LPAREN ArgumentDefinitions . RPAREN COLON Type LBRACKET Statements RBRACKET
   22         | FUNCTION WORD LPAREN ArgumentDefinitions . RPAREN LBRACKET Statements RBRACKET

    RPAREN  shift, and go to state 32
    COMMA   shift, and go to state 33


state 26

   13 Type: WORD LINK . WORD

    WORD  shift, and go to state 34


state 27

   12 Type: TYPE_ARRAY LPAREN . Type RPAREN

    WORD         shift, and go to state 14
    TYPE_ARRAY   shift, and go to state 15
    TYPE_VOID    shift, and go to state 16
    TYPE_BOOL    shift, and go to state 17
    TYPE_INT     shift, and go to state 19
    TYPE_STRING  shift, and go to state 20

    Type  go to state 35


state 28

    5 Program: Program TYPE WORD ASSIGN STRUCT LBRACKET . BaseStructureInfo RBRACKET

    $default  reduce using rule 6 (BaseStructureInfo)

    BaseStructureInfo  go to state 36


state 29

   17 ArgumentDefinition: WORD COLON . Type

    WORD         shift, and go to state 14
    TYPE_ARRAY   shift, and go to state 15
    TYPE_VOID    shift, and go to state 16
    TYPE_BOOL    shift, and go to state 17
    TYPE_INT     shift, and go to state 19
    TYPE_STRING  shift, and go to state 20

    Type  go to state 37


state 30

   23 Function: FUNCTION WORD LPAREN RPAREN LBRACKET . Statements RBRACKET

    $default  reduce using rule 26 (Statements)

    Statements  go to state 38


state 31

   21 Function: FUNCTION WORD LPAREN RPAREN COLON . Type LBRACKET Statements RBRACKET

    WORD         shift, and go to state 14
    TYPE_ARRAY   shift, and go to state 15
    TYPE_VOID    shift, and go to state 16
    TYPE_BOOL    shift, and go to state 17
    TYPE_INT     shift, and go to state 19
    TYPE_STRING  shift, and go to state 20

    Type  go to state 39


state 32

   20 Function: FUNCTION WORD LPAREN ArgumentDefinitions RPAREN . COLON Type LBRACKET Statements RBRACKET
   22         | FUNCTION WORD LPAREN ArgumentDefinitions RPAREN . LBRACKET Statements RBRACKET

    LBRACKET  shift, and go to state 40
    COLON     shift, and go to state 41


state 33

   19 ArgumentDefinitions: ArgumentDefinitions COMMA . ArgumentDefinition

    WORD  shift, and go to state 22

    ArgumentDefinition  go to state 42


state 34

   13 Type: WORD LINK WORD .

    $default  reduce using rule 13 (Type)


state 35

   12 Type: TYPE_ARRAY LPAREN Type . RPAREN

    RPAREN  shift, and go to state 43


state 36

    5 Program: Program TYPE WORD ASSIGN STRUCT LBRACKET BaseStructureInfo . RBRACKET
    7 BaseStructureInfo: BaseStructureInfo . WORD COLON Type

    WORD      shift, and go to state 44
    RBRACKET  shift, and go to state 45


state 37

   17 ArgumentDefinition: WORD COLON Type .

    $default  reduce using rule 17 (ArgumentDefinition)


state 38

   23 Function: FUNCTION WORD LPAREN RPAREN LBRACKET Statements . RBRACKET
   27 Statements: Statements . Statement
   28           | Statements . RETURN

    WORD         shift, and go to state 46
    STRING       shift, and go to state 47
    INT          shift, and go to state 48
    IF           shift, and go to state 49
    FOR          shift, and go to state 50
    TYPE_ARRAY   shift, and go to state 15
    TYPE_VOID    shift, and go to state 16
    RETURN       shift, and go to state 51
    WHILE        shift, and go to state 52
    LPAREN       shift, and go to state 53
    RBRACKET     shift, and go to state 54
    TWOMINUS     shift, and go to state 55
    TWOPLUS      shift, and go to state 56
    TYPE_BOOL    shift, and go to state 17
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    NIL          shift, and go to state 59
    VARIABLE     shift, and go to state 60
    LENGTH       shift, and go to state 61
    TYPE_INT     shift, and go to state 19
    TYPE_STRING  shift, and go to state 20
    LSQBRACKET   shift, and go to state 62

    Type          go to state 63
    Variable      go to state 64
    AutoVariable  go to state 65
    FunctionCall  go to state 66
    Statement     go to state 67
    Expression    go to state 68


state 39

   21 Function: FUNCTION WORD LPAREN RPAREN COLON Type . LBRACKET Statements RBRACKET

    LBRACKET  shift, and go to state 69


state 40

   22 Function: FUNCTION WORD LPAREN ArgumentDefinitions RPAREN LBRACKET . Statements RBRACKET

    $default  reduce using rule 26 (Statements)

    Statements  go to state 70


state 41

   20 Function: FUNCTION WORD LPAREN ArgumentDefinitions RPAREN COLON . Type LBRACKET Statements RBRACKET

    WORD         shift, and go to state 14
    TYPE_ARRAY   shift, and go to state 15
    TYPE_VOID    shift, and go to state 16
    TYPE_BOOL    shift, and go to state 17
    TYPE_INT     shift, and go to state 19
    TYPE_STRING  shift, and go to state 20

    Type  go to state 71


state 42

   19 ArgumentDefinitions: ArgumentDefinitions COMMA ArgumentDefinition .

    $default  reduce using rule 19 (ArgumentDefinitions)


state 43

   12 Type: TYPE_ARRAY LPAREN Type RPAREN .

    $default  reduce using rule 12 (Type)


state 44

    7 BaseStructureInfo: BaseStructureInfo WORD . COLON Type

    COLON  shift, and go to state 72


state 45

    5 Program: Program TYPE WORD ASSIGN STRUCT LBRACKET BaseStructureInfo RBRACKET .

    $default  reduce using rule 5 (Program)


state 46

   13 Type: WORD . LINK WORD
   14     | WORD .
   29 FunctionCall: WORD . LPAREN Arguments RPAREN
   30             | WORD . LPAREN RPAREN
   31             | WORD . LINK WORD LPAREN Arguments RPAREN
   32             | WORD . LINK WORD LPAREN RPAREN
   53 Expression: WORD .
   68           | WORD . ASSIGN Expression
   69           | WORD . TWOPLUS
   71           | WORD . TWOMINUS

    ASSIGN    shift, and go to state 73
    LINK      shift, and go to state 74
    LPAREN    shift, and go to state 75
    TWOMINUS  shift, and go to state 76
    TWOPLUS   shift, and go to state 77

    LBRACKET  reduce using rule 14 (Type)
    LBRACKET  [reduce using rule 53 (Expression)]
    $default  reduce using rule 53 (Expression)


state 47

   44 Expression: STRING .

    $default  reduce using rule 44 (Expression)


state 48

   43 Expression: INT .

    $default  reduce using rule 43 (Expression)


state 49

   36 Statement: IF . Expression THEN IfStatements
   37          | IF . Expression THEN IfStatements ELSE IfStatements

    WORD         shift, and go to state 46
    STRING       shift, and go to state 47
    INT          shift, and go to state 48
    TYPE_ARRAY   shift, and go to state 15
    TYPE_VOID    shift, and go to state 16
    LPAREN       shift, and go to state 53
    TWOMINUS     shift, and go to state 55
    TWOPLUS      shift, and go to state 56
    TYPE_BOOL    shift, and go to state 17
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    NIL          shift, and go to state 59
    VARIABLE     shift, and go to state 60
    LENGTH       shift, and go to state 61
    TYPE_INT     shift, and go to state 19
    TYPE_STRING  shift, and go to state 20
    LSQBRACKET   shift, and go to state 62

    Type          go to state 63
    Variable      go to state 64
    AutoVariable  go to state 65
    FunctionCall  go to state 66
    Expression    go to state 78


state 50

   38 Statement: FOR . Expression END Expression END Expression DO IfStatements

    WORD         shift, and go to state 46
    STRING       shift, and go to state 47
    INT          shift, and go to state 48
    TYPE_ARRAY   shift, and go to state 15
    TYPE_VOID    shift, and go to state 16
    LPAREN       shift, and go to state 53
    TWOMINUS     shift, and go to state 55
    TWOPLUS      shift, and go to state 56
    TYPE_BOOL    shift, and go to state 17
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    NIL          shift, and go to state 59
    VARIABLE     shift, and go to state 60
    LENGTH       shift, and go to state 61
    TYPE_INT     shift, and go to state 19
    TYPE_STRING  shift, and go to state 20
    LSQBRACKET   shift, and go to state 62

    Type          go to state 63
    Variable      go to state 64
    AutoVariable  go to state 65
    FunctionCall  go to state 66
    Expression    go to state 79


state 51

   28 Statements: Statements RETURN .
   40 Statement: RETURN . Expression END

    WORD         shift, and go to state 46
    STRING       shift, and go to state 47
    INT          shift, and go to state 48
    TYPE_ARRAY   shift, and go to state 15
    TYPE_VOID    shift, and go to state 16
    LPAREN       shift, and go to state 53
    TWOMINUS     shift, and go to state 55
    TWOPLUS      shift, and go to state 56
    TYPE_BOOL    shift, and go to state 17
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    NIL          shift, and go to state 59
    VARIABLE     shift, and go to state 60
    LENGTH       shift, and go to state 61
    TYPE_INT     shift, and go to state 19
    TYPE_STRING  shift, and go to state 20
    LSQBRACKET   shift, and go to state 62

    WORD         [reduce using rule 28 (Statements)]
    STRING       [reduce using rule 28 (Statements)]
    INT          [reduce using rule 28 (Statements)]
    TYPE_ARRAY   [reduce using rule 28 (Statements)]
    TYPE_VOID    [reduce using rule 28 (Statements)]
    LPAREN       [reduce using rule 28 (Statements)]
    TWOMINUS     [reduce using rule 28 (Statements)]
    TWOPLUS      [reduce using rule 28 (Statements)]
    TYPE_BOOL    [reduce using rule 28 (Statements)]
    TRUE         [reduce using rule 28 (Statements)]
    FALSE        [reduce using rule 28 (Statements)]
    NIL          [reduce using rule 28 (Statements)]
    VARIABLE     [reduce using rule 28 (Statements)]
    LENGTH       [reduce using rule 28 (Statements)]
    TYPE_INT     [reduce using rule 28 (Statements)]
    TYPE_STRING  [reduce using rule 28 (Statements)]
    LSQBRACKET   [reduce using rule 28 (Statements)]
    $default     reduce using rule 28 (Statements)

    Type          go to state 63
    Variable      go to state 64
    AutoVariable  go to state 65
    FunctionCall  go to state 66
    Expression    go to state 80


state 52

   39 Statement: WHILE . Expression LBRACKET Statements RBRACKET

    WORD         shift, and go to state 46
    STRING       shift, and go to state 47
    INT          shift, and go to state 48
    TYPE_ARRAY   shift, and go to state 15
    TYPE_VOID    shift, and go to state 16
    LPAREN       shift, and go to state 53
    TWOMINUS     shift, and go to state 55
    TWOPLUS      shift, and go to state 56
    TYPE_BOOL    shift, and go to state 17
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    NIL          shift, and go to state 59
    VARIABLE     shift, and go to state 60
    LENGTH       shift, and go to state 61
    TYPE_INT     shift, and go to state 19
    TYPE_STRING  shift, and go to state 20
    LSQBRACKET   shift, and go to state 62

    Type          go to state 63
    Variable      go to state 64
    AutoVariable  go to state 65
    FunctionCall  go to state 66
    Expression    go to state 81


state 53

   67 Expression: LPAREN . Expression RPAREN

    WORD         shift, and go to state 46
    STRING       shift, and go to state 47
    INT          shift, and go to state 48
    TYPE_ARRAY   shift, and go to state 15
    TYPE_VOID    shift, and go to state 16
    LPAREN       shift, and go to state 53
    TWOMINUS     shift, and go to state 55
    TWOPLUS      shift, and go to state 56
    TYPE_BOOL    shift, and go to state 17
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    NIL          shift, and go to state 59
    VARIABLE     shift, and go to state 60
    LENGTH       shift, and go to state 61
    TYPE_INT     shift, and go to state 19
    TYPE_STRING  shift, and go to state 20
    LSQBRACKET   shift, and go to state 62

    Type          go to state 63
    Variable      go to state 64
    AutoVariable  go to state 65
    FunctionCall  go to state 66
    Expression    go to state 82


state 54

   23 Function: FUNCTION WORD LPAREN RPAREN LBRACKET Statements RBRACKET .

    $default  reduce using rule 23 (Function)


state 55

   72 Expression: TWOMINUS . WORD

    WORD  shift, and go to state 83


state 56

   70 Expression: TWOPLUS . WORD

    WORD  shift, and go to state 84


state 57

   41 Expression: TRUE .

    $default  reduce using rule 41 (Expression)


state 58

   42 Expression: FALSE .

    $default  reduce using rule 42 (Expression)


state 59

   59 Expression: NIL . EQUALS Expression

    EQUALS  shift, and go to state 85


state 60

   15 Variable: VARIABLE . WORD COLON Type
   16 AutoVariable: VARIABLE . WORD ASSIGN Expression

    WORD  shift, and go to state 86


state 61

   49 Expression: LENGTH . LPAREN Expression RPAREN

    LPAREN  shift, and go to state 87


state 62

   50 Expression: LSQBRACKET . Expression RSQBRACKET Type

    WORD         shift, and go to state 46
    STRING       shift, and go to state 47
    INT          shift, and go to state 48
    TYPE_ARRAY   shift, and go to state 15
    TYPE_VOID    shift, and go to state 16
    LPAREN       shift, and go to state 53
    TWOMINUS     shift, and go to state 55
    TWOPLUS      shift, and go to state 56
    TYPE_BOOL    shift, and go to state 17
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    NIL          shift, and go to state 59
    VARIABLE     shift, and go to state 60
    LENGTH       shift, and go to state 61
    TYPE_INT     shift, and go to state 19
    TYPE_STRING  shift, and go to state 20
    LSQBRACKET   shift, and go to state 62

    Type          go to state 63
    Variable      go to state 64
    AutoVariable  go to state 65
    FunctionCall  go to state 66
    Expression    go to state 88


state 63

   45 Expression: Type . LBRACKET Arguments RBRACKET

    LBRACKET  shift, and go to state 89


state 64

   46 Expression: Variable .
   47           | Variable . ASSIGN Expression

    ASSIGN  shift, and go to state 90

    $default  reduce using rule 46 (Expression)


state 65

   48 Expression: AutoVariable .

    $default  reduce using rule 48 (Expression)


state 66

   54 Expression: FunctionCall .

    $default  reduce using rule 54 (Expression)


state 67

   27 Statements: Statements Statement .

    $default  reduce using rule 27 (Statements)


state 68

   35 Statement: Expression . END
   51 Expression: Expression . LSQBRACKET Expression RSQBRACKET ASSIGN Expression
   52           | Expression . LSQBRACKET Expression RSQBRACKET
   55           | Expression . PLUS Expression
   56           | Expression . MINUS Expression
   57           | Expression . TIMES Expression
   58           | Expression . DIVIDE Expression
   60           | Expression . EQUALS NIL
   61           | Expression . EQUALS Expression
   62           | Expression . NOT EQUALS Expression
   63           | Expression . GREATER Expression
   64           | Expression . LESSER Expression
   65           | Expression . LESSER EQUALS Expression
   66           | Expression . GREATER EQUALS Expression
   73           | Expression . AND Expression
   74           | Expression . POINT WORD
   75           | Expression . POINT WORD ASSIGN Expression

    PLUS        shift, and go to state 91
    MINUS       shift, and go to state 92
    TIMES       shift, and go to state 93
    DIVIDE      shift, and go to state 94
    EQUALS      shift, and go to state 95
    GREATER     shift, and go to state 96
    LESSER      shift, and go to state 97
    NOT         shift, and go to state 98
    AND         shift, and go to state 99
    POINT       shift, and go to state 100
    LSQBRACKET  shift, and go to state 101
    END         shift, and go to state 102


state 69

   21 Function: FUNCTION WORD LPAREN RPAREN COLON Type LBRACKET . Statements RBRACKET

    $default  reduce using rule 26 (Statements)

    Statements  go to state 103


state 70

   22 Function: FUNCTION WORD LPAREN ArgumentDefinitions RPAREN LBRACKET Statements . RBRACKET
   27 Statements: Statements . Statement
   28           | Statements . RETURN

    WORD         shift, and go to state 46
    STRING       shift, and go to state 47
    INT          shift, and go to state 48
    IF           shift, and go to state 49
    FOR          shift, and go to state 50
    TYPE_ARRAY   shift, and go to state 15
    TYPE_VOID    shift, and go to state 16
    RETURN       shift, and go to state 51
    WHILE        shift, and go to state 52
    LPAREN       shift, and go to state 53
    RBRACKET     shift, and go to state 104
    TWOMINUS     shift, and go to state 55
    TWOPLUS      shift, and go to state 56
    TYPE_BOOL    shift, and go to state 17
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    NIL          shift, and go to state 59
    VARIABLE     shift, and go to state 60
    LENGTH       shift, and go to state 61
    TYPE_INT     shift, and go to state 19
    TYPE_STRING  shift, and go to state 20
    LSQBRACKET   shift, and go to state 62

    Type          go to state 63
    Variable      go to state 64
    AutoVariable  go to state 65
    FunctionCall  go to state 66
    Statement     go to state 67
    Expression    go to state 68


state 71

   20 Function: FUNCTION WORD LPAREN ArgumentDefinitions RPAREN COLON Type . LBRACKET Statements RBRACKET

    LBRACKET  shift, and go to state 105


state 72

    7 BaseStructureInfo: BaseStructureInfo WORD COLON . Type

    WORD         shift, and go to state 14
    TYPE_ARRAY   shift, and go to state 15
    TYPE_VOID    shift, and go to state 16
    TYPE_BOOL    shift, and go to state 17
    TYPE_INT     shift, and go to state 19
    TYPE_STRING  shift, and go to state 20

    Type  go to state 106


state 73

   68 Expression: WORD ASSIGN . Expression

    WORD         shift, and go to state 46
    STRING       shift, and go to state 47
    INT          shift, and go to state 48
    TYPE_ARRAY   shift, and go to state 15
    TYPE_VOID    shift, and go to state 16
    LPAREN       shift, and go to state 53
    TWOMINUS     shift, and go to state 55
    TWOPLUS      shift, and go to state 56
    TYPE_BOOL    shift, and go to state 17
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    NIL          shift, and go to state 59
    VARIABLE     shift, and go to state 60
    LENGTH       shift, and go to state 61
    TYPE_INT     shift, and go to state 19
    TYPE_STRING  shift, and go to state 20
    LSQBRACKET   shift, and go to state 62

    Type          go to state 63
    Variable      go to state 64
    AutoVariable  go to state 65
    FunctionCall  go to state 66
    Expression    go to state 107


state 74

   13 Type: WORD LINK . WORD
   31 FunctionCall: WORD LINK . WORD LPAREN Arguments RPAREN
   32             | WORD LINK . WORD LPAREN RPAREN

    WORD  shift, and go to state 108


state 75

   29 FunctionCall: WORD LPAREN . Arguments RPAREN
   30             | WORD LPAREN . RPAREN

    WORD         shift, and go to state 46
    STRING       shift, and go to state 47
    INT          shift, and go to state 48
    TYPE_ARRAY   shift, and go to state 15
    TYPE_VOID    shift, and go to state 16
    LPAREN       shift, and go to state 53
    RPAREN       shift, and go to state 109
    TWOMINUS     shift, and go to state 55
    TWOPLUS      shift, and go to state 56
    TYPE_BOOL    shift, and go to state 17
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    NIL          shift, and go to state 59
    VARIABLE     shift, and go to state 60
    LENGTH       shift, and go to state 61
    TYPE_INT     shift, and go to state 19
    TYPE_STRING  shift, and go to state 20
    LSQBRACKET   shift, and go to state 62

    Type          go to state 63
    Variable      go to state 64
    AutoVariable  go to state 65
    Arguments     go to state 110
    FunctionCall  go to state 66
    Expression    go to state 111


state 76

   71 Expression: WORD TWOMINUS .

    $default  reduce using rule 71 (Expression)


state 77

   69 Expression: WORD TWOPLUS .

    $default  reduce using rule 69 (Expression)


state 78

   36 Statement: IF Expression . THEN IfStatements
   37          | IF Expression . THEN IfStatements ELSE IfStatements
   51 Expression: Expression . LSQBRACKET Expression RSQBRACKET ASSIGN Expression
   52           | Expression . LSQBRACKET Expression RSQBRACKET
   55           | Expression . PLUS Expression
   56           | Expression . MINUS Expression
   57           | Expression . TIMES Expression
   58           | Expression . DIVIDE Expression
   60           | Expression . EQUALS NIL
   61           | Expression . EQUALS Expression
   62           | Expression . NOT EQUALS Expression
   63           | Expression . GREATER Expression
   64           | Expression . LESSER Expression
   65           | Expression . LESSER EQUALS Expression
   66           | Expression . GREATER EQUALS Expression
   73           | Expression . AND Expression
   74           | Expression . POINT WORD
   75           | Expression . POINT WORD ASSIGN Expression
